@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>2</version>
+  <version>3</version>
   <dependencies>
     <dependency>profile-collective.quickupload:default</dependency>
     <dependency>profile-collective.externaleditor:default</dependency>
